Original_code/source_files/Esgish2GrammarParser.py
# Generated from Esgish2Grammar.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing import TextIO


class Esgish2GrammarParser ( Parser ):

    grammarFileName = "Esgish2Grammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "','", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'IS'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'EMPTY'", "<INVALID>", "'CASE_COUNT'", 
                     "'IF'", "'PERSON_COUNT'", "'PERCENTILE_RANK_IN_CATEGORY'", 
                     "'PERCENTILE_RANK'", "'QUANTILE'", "'QUANTILE_IN_CATEGORY'", 
                     "'RANK_ASCENDING'", "'RANK_DESCENDING'", "'SUM'", "'DIFFERENCE'", 
                     "'COALESCE'", "'RATIO'", "'YEARS_SINCE'", "'BOOLEAN'", 
                     "'AND'", "'OR'", "'NOT'", "'['", "']'", "'NULL'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "SAVED_SCREEN", "FACTOR", "CUSTOM_SCORE", "OP_NULL_TYPE", 
                      "OP_BOOLEAN", "OP_ORDER", "OP_STRING_MATCH", "OP_STRING_LIST", 
                      "OP_STRING_MAP", "OP_STRING_LIST_NO_ARG", "OP_DATE", 
                      "CASE_COUNT", "IF", "PERSON_COUNT", "PERCENTILE_RANK_IN_CATEGORY", 
                      "PERCENTILE_RANK", "QUANTILE", "QUANTILE_IN_CATEGORY", 
                      "RANK_ASCENDING", "RANK_DESCENDING", "SUM", "DIFFERENCE", 
                      "COALESCE", "RATIO", "YEARS_SINCE", "BOOLEAN", "AND", 
                      "OR", "NOT", "BO", "BC", "NULL", "NULL_LIST", "ARG", 
                      "WS" ]

    RULE_start = 0
    RULE_query = 1
    RULE_wrappedQuery = 2
    RULE_singleFactorQuery = 3
    RULE_booleanQuery = 4
    RULE_dateQuery = 5
    RULE_formulaQuery = 6
    RULE_nullTypeQuery = 7
    RULE_numberOrStringQuery = 8
    RULE_stringListQuery = 9
    RULE_stringMapQuery = 10
    RULE_stringQuery = 11
    RULE_savedQuery = 12
    RULE_wrappedSavedQuery = 13
    RULE_customScoreQuery = 14
    RULE_andQuery = 15
    RULE_orQuery = 16
    RULE_negatedQuery = 17
    RULE_groupQueryElement = 18
    RULE_formula = 19
    RULE_ratioFormula = 20
    RULE_coalesceFormula = 21
    RULE_caseCountFormula = 22
    RULE_ifFormula = 23
    RULE_personCountFormula = 24
    RULE_percentileRankFormula = 25
    RULE_percentileRankInCategoryFormula = 26
    RULE_quantileFormula = 27
    RULE_quantileFormulaInCategoryFormula = 28
    RULE_rankAscendingFormula = 29
    RULE_rankDescendingFormula = 30
    RULE_sumFormula = 31
    RULE_differenceFormula = 32
    RULE_yearsSinceFormula = 33
    RULE_booleanFormula = 34

    ruleNames =  [ "start", "query", "wrappedQuery", "singleFactorQuery", 
                   "booleanQuery", "dateQuery", "formulaQuery", "nullTypeQuery", 
                   "numberOrStringQuery", "stringListQuery", "stringMapQuery", 
                   "stringQuery", "savedQuery", "wrappedSavedQuery", "customScoreQuery", 
                   "andQuery", "orQuery", "negatedQuery", "groupQueryElement", 
                   "formula", "ratioFormula", "coalesceFormula", "caseCountFormula", 
                   "ifFormula", "personCountFormula", "percentileRankFormula", 
                   "percentileRankInCategoryFormula", "quantileFormula", 
                   "quantileFormulaInCategoryFormula", "rankAscendingFormula", 
                   "rankDescendingFormula", "sumFormula", "differenceFormula", 
                   "yearsSinceFormula", "booleanFormula" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    SAVED_SCREEN=4
    FACTOR=5
    CUSTOM_SCORE=6
    OP_NULL_TYPE=7
    OP_BOOLEAN=8
    OP_ORDER=9
    OP_STRING_MATCH=10
    OP_STRING_LIST=11
    OP_STRING_MAP=12
    OP_STRING_LIST_NO_ARG=13
    OP_DATE=14
    CASE_COUNT=15
    IF=16
    PERSON_COUNT=17
    PERCENTILE_RANK_IN_CATEGORY=18
    PERCENTILE_RANK=19
    QUANTILE=20
    QUANTILE_IN_CATEGORY=21
    RANK_ASCENDING=22
    RANK_DESCENDING=23
    SUM=24
    DIFFERENCE=25
    COALESCE=26
    RATIO=27
    YEARS_SINCE=28
    BOOLEAN=29
    AND=30
    OR=31
    NOT=32
    BO=33
    BC=34
    NULL=35
    NULL_LIST=36
    ARG=37
    WS=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(Esgish2GrammarParser.EOF, 0)

        def query(self):
            return self.getTypedRuleContext(Esgish2GrammarParser.QueryContext,0)


        def wrappedQuery(self):
            return self.getTypedRuleContext(Esgish2GrammarParser.WrappedQueryContext,0)


        def formula(self):
            return self.getTypedRuleContext(Esgish2GrammarParser.FormulaContext,0)


        def getRuleIndex(self):
            return Esgish2GrammarParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = Esgish2GrammarParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 70
                self.query()
                pass

            elif la_ == 2:
                self.state = 71
                self.wrappedQuery()
                pass

            elif la_ == 3:
                self.state = 72
                self.formula()
                pass


            self.state = 75
            self.match(Esgish2GrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def singleFactorQuery(self):
            return self.getTypedRuleContext(Esgish2GrammarParser.SingleFactorQueryContext,0)


        def andQuery(self):
            return self.getTypedRuleContext(Esgish2GrammarParser.AndQueryContext,0)


        def orQuery(self):
            return self.getTypedRuleContext(Esgish2GrammarParser.OrQueryContext,0)


        def negatedQuery(self):
            return self.getTypedRuleContext(Esgish2GrammarParser.NegatedQueryContext,0)


        def savedQuery(self):
            return self.getTypedRuleContext(Esgish2GrammarParser.SavedQueryContext,0)


        def customScoreQuery(self):
            return self.getTypedRuleContext(Esgish2GrammarParser.CustomScoreQueryContext,0)


        def getRuleIndex(self):
            return Esgish2GrammarParser.RULE_query

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery" ):
                listener.enterQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery" ):
                listener.exitQuery(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuery" ):
                return visitor.visitQuery(self)
            else:
                return visitor.visitChildren(self)




    def query(self):

        localctx = Esgish2GrammarParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_query)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 77
                self.singleFactorQuery()
                pass

            elif la_ == 2:
                self.state = 78
                self.andQuery()
                pass

            elif la_ == 3:
                self.state = 79
                self.orQuery()
                pass

            elif la_ == 4:
                self.state = 80
                self.negatedQuery()
                pass

            elif la_ == 5:
                self.state = 81
                self.savedQuery()
                pass

            elif la_ == 6:
                self.state = 82
                self.customScoreQuery()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WrappedQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def query(self):
            return self.getTypedRuleContext(Esgish2GrammarParser.QueryContext,0)


        def wrappedQuery(self):
            return self.getTypedRuleContext(Esgish2GrammarParser.WrappedQueryContext,0)


        def getRuleIndex(self):
            return Esgish2GrammarParser.RULE_wrappedQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWrappedQuery" ):
                listener.enterWrappedQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWrappedQuery" ):
                listener.exitWrappedQuery(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWrappedQuery" ):
                return visitor.visitWrappedQuery(self)
            else:
                return visitor.visitChildren(self)




    def wrappedQuery(self):

        localctx = Esgish2GrammarParser.WrappedQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_wrappedQuery)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(Esgish2GrammarParser.T__0)
            self.state = 88
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4, 5, 6, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32]:
                self.state = 86
                self.query()
                pass
            elif token in [1]:
                self.state = 87
                self.wrappedQuery()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 90
            self.match(Esgish2GrammarParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SingleFactorQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def booleanQuery(self):
            return self.getTypedRuleContext(Esgish2GrammarParser.BooleanQueryContext,0)


        def customScoreQuery(self):
            return self.getTypedRuleContext(Esgish2GrammarParser.CustomScoreQueryContext,0)


        def dateQuery(self):
            return self.getTypedRuleContext(Esgish2GrammarParser.DateQueryContext,0)


        def formulaQuery(self):
            return self.getTypedRuleContext(Esgish2GrammarParser.FormulaQueryContext,0)


        def nullTypeQuery(self):
            return self.getTypedRuleContext(Esgish2GrammarParser.NullTypeQueryContext,0)


        def numberOrStringQuery(self):
            return self.getTypedRuleContext(Esgish2GrammarParser.NumberOrStringQueryContext,0)


        def stringListQuery(self):
            return self.getTypedRuleContext(Esgish2GrammarParser.StringListQueryContext,0)


        def stringMapQuery(self):
            return self.getTypedRuleContext(Esgish2GrammarParser.StringMapQueryContext,0)


        def stringQuery(self):
            return self.getTypedRuleContext(Esgish2GrammarParser.StringQueryContext,0)


        def negatedQuery(self):
            return self.getTypedRuleContext(Esgish2GrammarParser.NegatedQueryContext,0)


        def getRuleIndex(self):
            return Esgish2GrammarParser.RULE_singleFactorQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSingleFactorQuery" ):
                listener.enterSingleFactorQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSingleFactorQuery" ):
                listener.exitSingleFactorQuery(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingleFactorQuery" ):
                return visitor.visitSingleFactorQuery(self)
            else:
                return visitor.visitChildren(self)




    def singleFactorQuery(self):

        localctx = Esgish2GrammarParser.SingleFactorQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_singleFactorQuery)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 92
                self.booleanQuery()
                pass

            elif la_ == 2:
                self.state = 93
                self.customScoreQuery()
                pass

            elif la_ == 3:
                self.state = 94
                self.dateQuery()
                pass

            elif la_ == 4:
                self.state = 95
                self.formulaQuery()
                pass

            elif la_ == 5:
                self.state = 96
                self.nullTypeQuery()
                pass

            elif la_ == 6:
                self.state = 97
                self.numberOrStringQuery()
                pass

            elif la_ == 7:
                self.state = 98
                self.stringListQuery()
                pass

            elif la_ == 8:
                self.state = 99
                self.stringMapQuery()
                pass

            elif la_ == 9:
                self.state = 100
                self.stringQuery()
                pass

            elif la_ == 10:
                self.state = 101
                self.negatedQuery()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BooleanQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FACTOR(self):
            return self.getToken(Esgish2GrammarParser.FACTOR, 0)

        def OP_BOOLEAN(self):
            return self.getToken(Esgish2GrammarParser.OP_BOOLEAN, 0)

        def NULL_LIST(self):
            return self.getToken(Esgish2GrammarParser.NULL_LIST, 0)

        def getRuleIndex(self):
            return Esgish2GrammarParser.RULE_booleanQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBooleanQuery" ):
                listener.enterBooleanQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBooleanQuery" ):
                listener.exitBooleanQuery(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBooleanQuery" ):
                return visitor.visitBooleanQuery(self)
            else:
                return visitor.visitChildren(self)




    def booleanQuery(self):

        localctx = Esgish2GrammarParser.BooleanQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_booleanQuery)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(Esgish2GrammarParser.FACTOR)
            self.state = 105
            self.match(Esgish2GrammarParser.OP_BOOLEAN)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==36:
                self.state = 106
                self.match(Esgish2GrammarParser.NULL_LIST)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DateQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FACTOR(self):
            return self.getToken(Esgish2GrammarParser.FACTOR, 0)

        def OP_DATE(self):
            return self.getToken(Esgish2GrammarParser.OP_DATE, 0)

        def ARG(self):
            return self.getToken(Esgish2GrammarParser.ARG, 0)

        def NULL_LIST(self):
            return self.getToken(Esgish2GrammarParser.NULL_LIST, 0)

        def getRuleIndex(self):
            return Esgish2GrammarParser.RULE_dateQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDateQuery" ):
                listener.enterDateQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDateQuery" ):
                listener.exitDateQuery(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDateQuery" ):
                return visitor.visitDateQuery(self)
            else:
                return visitor.visitChildren(self)




    def dateQuery(self):

        localctx = Esgish2GrammarParser.DateQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_dateQuery)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(Esgish2GrammarParser.FACTOR)
            self.state = 110
            self.match(Esgish2GrammarParser.OP_DATE)
            self.state = 111
            self.match(Esgish2GrammarParser.ARG)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==36:
                self.state = 112
                self.match(Esgish2GrammarParser.NULL_LIST)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormulaQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def formula(self):
            return self.getTypedRuleContext(Esgish2GrammarParser.FormulaContext,0)


        def OP_ORDER(self):
            return self.getToken(Esgish2GrammarParser.OP_ORDER, 0)

        def ARG(self):
            return self.getToken(Esgish2GrammarParser.ARG, 0)

        def NULL_LIST(self):
            return self.getToken(Esgish2GrammarParser.NULL_LIST, 0)

        def getRuleIndex(self):
            return Esgish2GrammarParser.RULE_formulaQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormulaQuery" ):
                listener.enterFormulaQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormulaQuery" ):
                listener.exitFormulaQuery(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormulaQuery" ):
                return visitor.visitFormulaQuery(self)
            else:
                return visitor.visitChildren(self)




    def formulaQuery(self):

        localctx = Esgish2GrammarParser.FormulaQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_formulaQuery)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.formula()
            self.state = 116
            self.match(Esgish2GrammarParser.OP_ORDER)
            self.state = 117
            self.match(Esgish2GrammarParser.ARG)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==36:
                self.state = 118
                self.match(Esgish2GrammarParser.NULL_LIST)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NullTypeQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FACTOR(self):
            return self.getToken(Esgish2GrammarParser.FACTOR, 0)

        def OP_NULL_TYPE(self):
            return self.getToken(Esgish2GrammarParser.OP_NULL_TYPE, 0)

        def NULL(self):
            return self.getToken(Esgish2GrammarParser.NULL, 0)

        def NULL_LIST(self):
            return self.getToken(Esgish2GrammarParser.NULL_LIST, 0)

        def getRuleIndex(self):
            return Esgish2GrammarParser.RULE_nullTypeQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNullTypeQuery" ):
                listener.enterNullTypeQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNullTypeQuery" ):
                listener.exitNullTypeQuery(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNullTypeQuery" ):
                return visitor.visitNullTypeQuery(self)
            else:
                return visitor.visitChildren(self)




    def nullTypeQuery(self):

        localctx = Esgish2GrammarParser.NullTypeQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_nullTypeQuery)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(Esgish2GrammarParser.FACTOR)
            self.state = 122
            self.match(Esgish2GrammarParser.OP_NULL_TYPE)
            self.state = 127
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [-1, 2, 3, 36]:
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==36:
                    self.state = 123
                    self.match(Esgish2GrammarParser.NULL_LIST)


                pass
            elif token in [35]:
                self.state = 126
                self.match(Esgish2GrammarParser.NULL)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumberOrStringQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FACTOR(self):
            return self.getToken(Esgish2GrammarParser.FACTOR, 0)

        def OP_ORDER(self):
            return self.getToken(Esgish2GrammarParser.OP_ORDER, 0)

        def ARG(self):
            return self.getToken(Esgish2GrammarParser.ARG, 0)

        def NULL_LIST(self):
            return self.getToken(Esgish2GrammarParser.NULL_LIST, 0)

        def getRuleIndex(self):
            return Esgish2GrammarParser.RULE_numberOrStringQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumberOrStringQuery" ):
                listener.enterNumberOrStringQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumberOrStringQuery" ):
                listener.exitNumberOrStringQuery(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumberOrStringQuery" ):
                return visitor.visitNumberOrStringQuery(self)
            else:
                return visitor.visitChildren(self)




    def numberOrStringQuery(self):

        localctx = Esgish2GrammarParser.NumberOrStringQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_numberOrStringQuery)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(Esgish2GrammarParser.FACTOR)
            self.state = 130
            self.match(Esgish2GrammarParser.OP_ORDER)
            self.state = 131
            self.match(Esgish2GrammarParser.ARG)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==36:
                self.state = 132
                self.match(Esgish2GrammarParser.NULL_LIST)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringListQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FACTOR(self):
            return self.getToken(Esgish2GrammarParser.FACTOR, 0)

        def OP_STRING_LIST(self):
            return self.getToken(Esgish2GrammarParser.OP_STRING_LIST, 0)

        def ARG(self):
            return self.getToken(Esgish2GrammarParser.ARG, 0)

        def OP_STRING_LIST_NO_ARG(self):
            return self.getToken(Esgish2GrammarParser.OP_STRING_LIST_NO_ARG, 0)

        def NULL_LIST(self):
            return self.getToken(Esgish2GrammarParser.NULL_LIST, 0)

        def getRuleIndex(self):
            return Esgish2GrammarParser.RULE_stringListQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringListQuery" ):
                listener.enterStringListQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringListQuery" ):
                listener.exitStringListQuery(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStringListQuery" ):
                return visitor.visitStringListQuery(self)
            else:
                return visitor.visitChildren(self)




    def stringListQuery(self):

        localctx = Esgish2GrammarParser.StringListQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_stringListQuery)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 135
                self.match(Esgish2GrammarParser.FACTOR)
                self.state = 136
                self.match(Esgish2GrammarParser.OP_STRING_LIST)
                self.state = 137
                self.match(Esgish2GrammarParser.ARG)
                pass

            elif la_ == 2:
                self.state = 138
                self.match(Esgish2GrammarParser.FACTOR)
                self.state = 139
                self.match(Esgish2GrammarParser.OP_STRING_LIST_NO_ARG)
                pass


            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==36:
                self.state = 142
                self.match(Esgish2GrammarParser.NULL_LIST)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringMapQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FACTOR(self):
            return self.getToken(Esgish2GrammarParser.FACTOR, 0)

        def OP_STRING_MAP(self):
            return self.getToken(Esgish2GrammarParser.OP_STRING_MAP, 0)

        def ARG(self):
            return self.getToken(Esgish2GrammarParser.ARG, 0)

        def NULL_LIST(self):
            return self.getToken(Esgish2GrammarParser.NULL_LIST, 0)

        def getRuleIndex(self):
            return Esgish2GrammarParser.RULE_stringMapQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringMapQuery" ):
                listener.enterStringMapQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringMapQuery" ):
                listener.exitStringMapQuery(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStringMapQuery" ):
                return visitor.visitStringMapQuery(self)
            else:
                return visitor.visitChildren(self)




    def stringMapQuery(self):

        localctx = Esgish2GrammarParser.StringMapQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_stringMapQuery)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(Esgish2GrammarParser.FACTOR)
            self.state = 146
            self.match(Esgish2GrammarParser.OP_STRING_MAP)
            self.state = 147
            self.match(Esgish2GrammarParser.ARG)
            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==36:
                self.state = 148
                self.match(Esgish2GrammarParser.NULL_LIST)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FACTOR(self):
            return self.getToken(Esgish2GrammarParser.FACTOR, 0)

        def OP_STRING_MATCH(self):
            return self.getToken(Esgish2GrammarParser.OP_STRING_MATCH, 0)

        def ARG(self):
